--- a/FormLogScraper.resx
+++ b/FormLogScraper.resx
@@ -205,6 +205,9 @@
         iAYHCSRUweSTu5liMn4BDZA1jEwCHAAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="ContextMenuReset.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>111, 17</value>
+  </metadata>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>70</value>
   </metadata>
