Improved JSON detection in its post processor. Improved icons for post processing. Added stop option to post processing

--- a/LogPostProcessors/UserControlPostProcessing.resx
+++ b/LogPostProcessors/UserControlPostProcessing.resx
@@ -124,27 +124,30 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAtgQAAAJNU0Z0AUkBTAIBAQIB
-        AAFAAQABQAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMAARADAAEBAQABIAYAARBC
-        AAMGAQc8AAMGAQe8AANSAagDDAEQOAADUgGoAwwBEJwAAwQBBQQCDAADBgEHAzsBZAMAAf8DUgGjAxMB
-        GhgAAwQBBQQCDAADBgEHAzsBZAMAAf8DUgGjAxMBGpgAAzgBXAM2AVcMAANCAXUDIwH4AwAB/wIAAQEB
-        /wNWAbIDCQELFAADOAFcAzYBVwwAA0IBdQMjAfgDAQH/AQABAQEAAf8DVgGyAwkBC5AABAEDWwHVA1oB
-        0gQBDAADFwEfAyMB+AM9AWkYAAQBA1sB1QNaAdIEAQwAAxcBHwMjAfgDPQFpmAADMwFQAQECAAH/AwAB
-        /wMxAU4QAANEAXoDAwEEGAADMwFQAwAB/wEBAgAB/wMxAU4QAANEAXoDAwEEkAAEAgM4AVsDVgHhAwAB
-        /wEBAQABAQH/A1YB4QM2AVgEAiAABAIDOAFbA1YB4QNYAbgDWAG9A1YB4QM2AVgEApgAAwQBBQM8AWYD
-        VwHdAgABAQH/AwAB/wIBAQAB/wEBAgAB/wMAAf8BAQIAAf8DVwHcAzsBZQMEAQUQAAMEAQUDPAFmA1YB
-        3gIAAQEB/wNVAa4DFwEfAxcBHwNVAa4BAAEBAQAB/wNXAd0DOgFiAwQBBZAAAwQBBQM8AWYDVwHcAwAB
-        /wEBAgAB/wMAAf8BAAIBAf8CAQEAAf8DAAH/A1kB2wM7AWQDBAEFEAADBAEFAz0BaANWAd4DAAH/A1UB
-        rAMXAR8DGAEgA1UBrAEBAgAB/wNXAd0DOwFlAwQBBZgABAIDOQFeA1IB4gIAAQEB/wMAAf8DVgHhAzcB
-        WgQCIAAEAgM5AV4DUgHiA1gBugNZAbsDVgHhAzcBWgQCqAADMwFQAQABAQEAAf8CAAEBAf8DMQFNEAAD
-        QwF3AwMBBBgAAzMBUAEAAgEB/wEAAQEBAAH/AzEBTRAAA0MBdwMDAQSYAAQBA1sB1QNbAdQEAQwAAxgB
-        IQMcAfoDPgFrGAAEAQNbAdUDWwHUBAEMAAMYASEBHAEdARwB+gM+AWucAAM4AVsDNgFZDAADQQFyAyMB
-        +AEBAgAB/wMAAf8DVAGrAwkBCxQAAzgBWwM2AVkMAANBAXIDIwH4AwAB/wIAAQEB/wNUAasDCQELlAAD
-        AgEDAwIBAwwAAwYBBwM7AWMBAQIAAf8DUQGiAxMBGhgAAwIBAwMCAQMMAAMGAQcDOwFjAwAB/wNRAaID
-        EwEatAADUwGqAwwBEDgAA1MBqgMMARC4AAMGAQc8AAMGAQeMAAFCAU0BPgcAAT4DAAEoAwABQAMAARAD
-        AAEBAQABAQUAAYAXAAP/AQAB/wH3Af8B9wQAAf8B8wH/AfMEAAH5AcEB+QHBBAAB+QHAAfkBwAQAAfAB
-        4wHwAeMEAAHwAfMB8AHzBAABwAE/AcABPwUAAQ8BAAEPBQABDwEAAQ8EAAHAAT8BwAE/BAAB8AHzAfAB
-        8wQAAfAB4wHwAeMEAAH5AcAB+QHABAAB+QHBAfkBwQQAAf8B8wH/AfMEAAH/AfcB/wH3BAAL
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAQAUAAAJNU0Z0AUkBTAIBAQIB
+        AAFgAQABYAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMAARADAAEBAQABIAYAARAa
+        AAMgAS0DFgEeVAADGgElAygBQAMhATGUAAMsAUQBBQIEAfwDGQHtAx0BKFAAAy8BrAMAAf8BGQIaAdyQ
+        AAMZASMDDwH1AgEBAAH/AQABAQEAAf8CHgEdAesDGwEmQAADHAEoARoCGwHbATEBMgExAaECAgEDAfwB
+        AQIAAf8BAQEAAQEB/wMvAawDHQHWAywBTYQAAwsBDgMwAdYBAAEBAQAB/wEAAQEBAAH/AwAB/wEiAiEB
+        5gMYASEQAAMnAToDEgEYAxMBGQMoATwcAAEqAikBuwIAAQEB/wMAAf8BEAIPAewDJwHAAxUB4gEBAgAB
+        /wMAAf8BFQIUAeUDBQEGhAADEAEVAy8B2AEAAQEBAAH/AwEB/wMAAf8DJgHiAxUBHQwAAwwBEAMmAeID
+        JwHhAwwBDxwAAzEBXwICAQEB/gMAAf8DGwEmBAADCQELAw4B7QMAAf8BNAE1ATQBj4wAAxIBGAMtAdoD
+        AAH/AQECAAH/AwAB/wEqAisB3QMUARsIAAMNAREDJQHjAyYB4gMMAQ8cAAMCAQMDEQHoAgEBAgH+AwIB
+        AwgAAR8CHgHUAQECAAH/AxUBHJAAAxUBHAMqAd4CAAEBAf8BAAEBAQAB/wMAAf8DLQHaAxIBGAQAAyYB
+        OQMSARgDEgEYAyYBORwAAywBtAMAAf8DAAH/ATUCNAGLAxEBFgMzAWoDAAH/AgABAQH/ARkCGAHdAwYB
+        B5AAAxgBIAEkAiUB5AMAAf8DAAH/AzIB0wM8AcMDEAEVLAADNQGDAwEB/wEBAgAB/wMBAf8DAAH/AQAB
+        AQEAAf8CAAEBAf8DAAH/Ay0BspgAAxoBJAMgAecBLAIuAdkDEQEWAxsBJgNBAbQDDAEQHAADDwEUAygB
+        QAMKAQ0DCgENAzMBZgMXASADHQHWAwEB/wMKAfIDHwEtAy8BVgMbASacAAMcAScBOQE3ATkBywMaASQD
+        EQEWAzcBzgMWAR4YAAMqAUYDNQGDAwAB/wM0AW4DKgFFCAADMwGYAwAB/wIkASUBx6wAAx4BKwMvAdgD
+        NAHQAysBQRgAAykBQwMAAf8CBQEGAfkDMAGnAQECAgH+AwAB/wMfAS6sAAMnAToDEgEYAxMBGQMoATwE
+        AAMXBB8BLAQAAycBOgMSARgDEwEZAygBPAgAAwYBBwMdAdUDNQF7BAACNAEzAZUBKAInAcADAwEErAAD
+        DAEQAyYB4gMnAeEDDAEPEAADDAEQAyYB4gMnAeEDDAEPCAADKQFDAwIB/QImASUBxQMrAUgDHQHWAggB
+        BwH3AyEBMawAAw0BEQMlAeMDJgHiAwwBDxAAAw0BEQMlAeMDJgHiAwwBDwgAAwwBEAMvAaoDJgHCAQAC
+        AQH/AysBtwMvAagDBgEHrAADJgE5AxIBGAMSARgDJgE5EAADJgE5AxIBGAMSARgDJgE5EAADJQE7ASgC
+        JwHAAx0BKv8AqQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAc8C/wGPBAAB
+        hwL/AY8EAAEDAf8B/AEBBAABAQHhAfwFAAGAAeEB/AEhBAABwAFhAfwBMQQAAeABIQH8BQAB8AEfAfwB
+        AQQAAfgBDwHgAQEEAAH8AQ8BwQGPBAAB/gEfAYAB/wQAAeEBIQGIAf8EAALhAYAB/wQAAuEBgAH/BAAC
+        4QHjAf8EAAT/BAAL
 </value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -187,6 +190,15 @@
         iXrY8I2XfaDeVE/lM7XpTLZXIoRjrwlKHTRLO6P8A9F4NtBMb0j1AAAAAElFTkSuQmCC
 </value>
   </data>
+  <data name="StopToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAMtJREFUOE9t
+        UwESwyAII/9/dHdCCEHnRrUBQsBrBOL8A/mLAM7z7GV1JpbBZkTXQfAiGG8XW6ur88WoQBKBtpjz4EuU
+        SRCl+YqBsGLxRUQZuAc+xMHTN5xrFonmY5KToAlFfMW/ZykA4oOUiFgJ7zCR42RwJSSB2xpEZQnhxK26
+        tZNzSKwTfW84yWx4PsRu52n80STpR4FNXy1cvc9LUVkw5as6r9HUrsPu6tZlmJs+lCb7lzznjrUouwQt
+        h6aSe43kruj3cdded0XXD+APQIlaFxaJAAAAAElFTkSuQmCC
+</value>
+  </data>
   <data name="DeleteAllePostprocessingToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAV9JREFUOE91
@@ -197,18 +209,6 @@
         wRXwjbSaW6nDhGzxDEwQ+xXXMWDNb5ZHYKWSwBxwk8B2uZ3CcvV13mBDMJQTbQJLoDv5FzmKI+1WZ8gr
         yTbiBclm4B0xEhzH9Fj+zP+WzsWi0JnEuU3cdL/Fb//exOJT+F+yGwEa/D9vdUVcFj2xLwAAAABJRU5E
         rkJggg==
-</value>
-  </data>
-  <data name="AutoApplyToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAWNJREFUOE91
-        k0tKg0EQhL+6gEkWSoJvFBXUA0SyETyyN3ApiCBIDCgkEV2IS3eC0o+Z+SM4kJnJdFV39eOHsqQ4cm9n
-        3FYtCrg/5SX5Y6GhYGj3ABYHjhsTtrBX3w0zEFqCFkCvRq2RGEhaIhbI7PW9uuoDRp4bwIguOU+B24Xm
-        8gDNQ3F0kfJGiEmmtis4y5wvpLALJk14KYha0TKtU8QUuEdcVnyqarl1itC5HQvdAofABnAH7DRcRdbG
-        dHYnvUs8JfkIuEZeg8argUtTQ9aexCvwk78H4AZYb7k2eGfztSV4kREVDgQzonAG9DmwOZHPSSGHAwPN
-        IqqCLJ4Rm50YA3xOvNW9aHFIMXlTiyoFOUHbqaxo7vsQoZiTfF6TeHTJKRv0Buz/Sc/+xByIETApxgPg
-        C4vsTvSBZFX/d9UPKYruT1egb+ATdFKD1vqszkoxZVp5lc5VB6WaVzoc6PZt2PoFLMo2c6zsf9MAAAAA
-        SUVORK5CYII=
 </value>
   </data>
 </root>
