Improved post processing event so its clear why and how it was finished. Changed post processing user control interaction to always open the context menu

--- a/LogPostProcessors/UserControlPostProcessing.resx
+++ b/LogPostProcessors/UserControlPostProcessing.resx
@@ -124,30 +124,33 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAQAUAAAJNU0Z0AUkBTAIBAQIB
-        AAFgAQABYAEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMAARADAAEBAQABIAYAARAa
-        AAMgAS0DFgEeVAADGgElAygBQAMhATGUAAMsAUQBBQIEAfwDGQHtAx0BKFAAAy8BrAMAAf8BGQIaAdyQ
-        AAMZASMDDwH1AgEBAAH/AQABAQEAAf8CHgEdAesDGwEmQAADHAEoARoCGwHbATEBMgExAaECAgEDAfwB
-        AQIAAf8BAQEAAQEB/wMvAawDHQHWAywBTYQAAwsBDgMwAdYBAAEBAQAB/wEAAQEBAAH/AwAB/wEiAiEB
-        5gMYASEQAAMnAToDEgEYAxMBGQMoATwcAAEqAikBuwIAAQEB/wMAAf8BEAIPAewDJwHAAxUB4gEBAgAB
-        /wMAAf8BFQIUAeUDBQEGhAADEAEVAy8B2AEAAQEBAAH/AwEB/wMAAf8DJgHiAxUBHQwAAwwBEAMmAeID
-        JwHhAwwBDxwAAzEBXwICAQEB/gMAAf8DGwEmBAADCQELAw4B7QMAAf8BNAE1ATQBj4wAAxIBGAMtAdoD
-        AAH/AQECAAH/AwAB/wEqAisB3QMUARsIAAMNAREDJQHjAyYB4gMMAQ8cAAMCAQMDEQHoAgEBAgH+AwIB
-        AwgAAR8CHgHUAQECAAH/AxUBHJAAAxUBHAMqAd4CAAEBAf8BAAEBAQAB/wMAAf8DLQHaAxIBGAQAAyYB
-        OQMSARgDEgEYAyYBORwAAywBtAMAAf8DAAH/ATUCNAGLAxEBFgMzAWoDAAH/AgABAQH/ARkCGAHdAwYB
-        B5AAAxgBIAEkAiUB5AMAAf8DAAH/AzIB0wM8AcMDEAEVLAADNQGDAwEB/wEBAgAB/wMBAf8DAAH/AQAB
-        AQEAAf8CAAEBAf8DAAH/Ay0BspgAAxoBJAMgAecBLAIuAdkDEQEWAxsBJgNBAbQDDAEQHAADDwEUAygB
-        QAMKAQ0DCgENAzMBZgMXASADHQHWAwEB/wMKAfIDHwEtAy8BVgMbASacAAMcAScBOQE3ATkBywMaASQD
-        EQEWAzcBzgMWAR4YAAMqAUYDNQGDAwAB/wM0AW4DKgFFCAADMwGYAwAB/wIkASUBx6wAAx4BKwMvAdgD
-        NAHQAysBQRgAAykBQwMAAf8CBQEGAfkDMAGnAQECAgH+AwAB/wMfAS6sAAMnAToDEgEYAxMBGQMoATwE
-        AAMXBB8BLAQAAycBOgMSARgDEwEZAygBPAgAAwYBBwMdAdUDNQF7BAACNAEzAZUBKAInAcADAwEErAAD
-        DAEQAyYB4gMnAeEDDAEPEAADDAEQAyYB4gMnAeEDDAEPCAADKQFDAwIB/QImASUBxQMrAUgDHQHWAggB
-        BwH3AyEBMawAAw0BEQMlAeMDJgHiAwwBDxAAAw0BEQMlAeMDJgHiAwwBDwgAAwwBEAMvAaoDJgHCAQAC
-        AQH/AysBtwMvAagDBgEHrAADJgE5AxIBGAMSARgDJgE5EAADJgE5AxIBGAMSARgDJgE5EAADJQE7ASgC
-        JwHAAx0BKv8AqQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAc8C/wGPBAAB
-        hwL/AY8EAAEDAf8B/AEBBAABAQHhAfwFAAGAAeEB/AEhBAABwAFhAfwBMQQAAeABIQH8BQAB8AEfAfwB
-        AQQAAfgBDwHgAQEEAAH8AQ8BwQGPBAAB/gEfAYAB/wQAAeEBIQGIAf8EAALhAYAB/wQAAuEBgAH/BAAC
-        4QHjAf8EAAT/BAAL
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAACAYAAAJNU0Z0AUkBTAIBAQIB
+        AAEoAQABKAEAARgBAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMAARADAAEBAQABIAYAARiS
+        AAMbASUDKgFAAyIBMfwAAyABLQMWAR5wAANEAawDAAH/AywB3PgAAy0BRAEJAggB/AMsAe0DHQEoYAAD
+        HQEoASwCLQHbA0UBoQIEAQUB/AEBAgAB/wEBAQABAQH/A0QBrAMwAdYDMAFN6AADGQEjAxkB9QIBAQAB
+        /wEAAQEBAAH/AzMB6wMbASZcAAFAAj4BuwIAAQEB/wMAAf8BHQIcAewDPQHAAyYB4gEBAgAB/wMAAf8B
+        JQIkAeUDBQEG5AADCwEOA0YB1gEAAQEBAAH/AQABAQEAAf8DAAH/AzgB5gMYASEQAAMnAToDEgEYAxMB
+        GQMoATw4AAM4AV8CAwECAf4DAAH/AxsBJgQAAwkBCwMZAe0DAAH/AUQBRQFEAY/sAAMQARUDRwHYAQAB
+        AQEAAf8DAQH/AwAB/wM8AeIDFQEdDAADDAEQAzwB4gM/AeEDDAEPOAADAgEDAx8B6AICAQMB/gMCAQMI
+        AAE0AjMB1AEBAgAB/wMVARzwAAMSARgDRQHaAwAB/wEBAgAB/wMAAf8DQgHdAxQBGwgAAw0BEQM9AeMD
+        PAHiAwwBDxQAA08BnQNOAZ4cAANBAbQDAAH/AwAB/wNEAYsDEQEWAzwBagMAAf8CAAEBAf8BKwIqAd0D
+        BgEHFAADRQGdA0UBntQAAxUBHANCAd4CAAEBAf8BAAEBAQAB/wMAAf8DRQHaAxIBGAQAAyYBOQMSARgD
+        EgEYAyYBORAAA0QBegMAAf8DAAH/A0YBgBgAA0MBgwMBAf8BAQIAAf8DAQH/AwAB/wEAAQEBAAH/AgAB
+        AQH/AwAB/wNCAbIUAANBAXoDAAH/AwAB/wNCAYDUAAMYASABOAI6AeQDAAH/AwAB/wNKAdMDUQHDAxAB
+        FRwAA0wBkQMAAf8DAAH/AwAB/wMAAf8DTAGTCAADDwEUAyoBQAMKAQ0DCgENAzsBZgMYASADMAHWAwEB
+        /wMTAfIDIAEtAzUBVgMbASYQAANFAZEDAAH/AwAB/wMAAf8DAAH/A0QBk9QAAxoBJAM2AecDRAHZAxEB
+        FgMbASYDUgG0AwwBEBQAAzsBZQMAAf8DKgHuAzIB6QMyAekDLAHtAwAB/wQAAy0BRgNDAYMDAAH/Az0B
+        bgMtAUUIAANFAZgDAAH/AjkBOwHHGAADOgFlAwAB/wMXAe4DHgHpAx4B6QMZAe0DAAH/2AADHAEnAU8B
+        TgFPAcsDGgEkAxEBFgNOAc4DFgEeMAADLAFDAwAB/wIKAQsB+QNEAacBAgIDAf4DAAH/AyABLv8AIQAD
+        HgErA0cB2ANMAdADKwFBNAADBgEHAzAB1QNBAXsEAANFAZUDPQHAAwMBBP8AEQADJwE6AxIBGAMTARkD
+        KAE8BAADFwQfASwEAAMnAToDEgEYAxMBGQMoATwkAAMsAUMDBAH9AzsBxQMuAUgDMAHWAg8BDgH3AyIB
+        Mf8AEQADDAEQAzwB4gM/AeEDDAEPEAADDAEQAzwB4gM/AeEDDAEPJAADDAEQA0MBqgM8AcIBAAIBAf8D
+        QQG3A0QBqAMGAQf/ABEAAw0BEQM9AeMDPAHiAwwBDxAAAw0BEQM9AeMDPAHiAwwBDywAAygBOwM9AcAD
+        HgEq/wAZAAMmATkDEgEYAxIBGAMmATkQAAMmATkDEgEYAxIBGAMmATn/AEUAAUIBTQE+BwABPgMAASgD
+        AAFgAwABEAMAAQEBAAEBBQABwBcAA/8BAAT/AR8B/wYAAc8D/wEfAf8GAAGHAv8B+AEDAf8GAAEDAv8B
+        +AEBAf8GAAEBAeEB/wH4AUMB/wYAAYAB4QH/AfgBYwH/BgABwAFhAfMB+AEBAfMGAAHgASEB4QH4AQMB
+        4QYAAfABHwLAAQMBwAYAAfgBDwGAAYMBHwGABgAB/AEPAf8BAQL/BgAB/gEfAf8BEQL/BgAB4QEhAf8B
+        AQL/BgAC4QH/AQEC/wYAAuEB/wHHAv8GAALhBP8GAAs=
 </value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -157,37 +160,16 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="prettyPrintJSONToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAUVJREFUOE9l
-        k0FKBEEMRd8/gO4EcakbbXeC6DXUca4zLjyIiMJ4jrmBuFYQbzBbtSWpVKq6DXR1Kvn5SVVSUEW5NImt
-        VL4pxowdqoUqLa51+ERUYvcnq54RP8BLOnspXOYzzJNXVUNLvEZghRj+pWvIQeIO9N0Bql8j4jaD+tgJ
-        kKXAks3PwqgkmMV4hWFDy0iWGJNT8CNcVVh6g6S7k2tKBSdRJxtgC3oH9lq6liL6USn3EZ+gLXisNsgI
-        +DCCvuTUW7DJAeJLltSTF+sQZfkRamvbRHSEcBPY457cEHaJC6Fz0GsY75GstSZvoDPwi/ZLbNNZ6I11
-        AdpFugiCI+DQqxGXwE60OtqY5fn6K2klZMMylbYfsEEqE9s7fXkwZknrebxJ2NYxyo8zR9em/ul1h0x0
-        bkOpBAZOvf4c3wjq66y09v0B4aYvoV+WdxkAAAAASUVORK5CYII=
-</value>
-  </data>
-  <data name="prettyPrintXMLToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-    <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAUBJREFUOE9t
-        k01KA0EQhb+3COQggheQCN5DNxJ3AckEvYF4BBcewIVrcSe5gXibbF0kWj/d053Jg5mu6nrV9aqmB0nU
-        B4O9w3LPzYx5KGzb95i57rSE46QWje8Mq+xOrlPoGfgYM8e1aO7hajRvQlvgDZhXQkWQc61bK9B1w9oB
-        A3CDx44QfZa+GQR7oUX65xIH4ALpEo+xHnOzbJI3RgCWcaw/d0K/oFlyLLYHGbdUj2TBIeQX+AGvwHc/
-        KxnHVG3aGTwiO0D3Xbr4AV6cVe+Jt2AHWM5IbltIuTNcPrdRw7FMjrcQe2UOYQzICQvAhmaVzvwAcZXJ
-        6zKhMb/tUawk7DM+CHZBdkL3GfMWhtHNKGCX5h34aoTmRYrhlPwmuVh19xN4Kjf8RJHA9Bc4qahiGis6
-        fOnD7hVBRUn75/7jD18pKJZX+FeOAAAAAElFTkSuQmCC
-</value>
-  </data>
   <data name="ApplyToVisibleLogToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAVJJREFUOE9d
-        k7tKhEEMhb+zq2xhY20jPpCynZcVGy8gdoII+zjaiHY+iriVWuhTiM0vmSQz8+/AMGeSnGRyGYilBD1q
-        sIjtLphVXa9Po3qEtQsqMPgMbHfKUPRXNAWma6+aIc5BA+IB2AldFzaDigXiuJcJboHf4gBsvwBbfYTw
-        J3vOCngP3LIRe8Af4qaywrtHKoaaIwZR9v6okL7uJTYKJfLN+BPBGfBjZHum4Bs4MV2lp8MaGTYFV4JP
-        z81zlBhQzfcDuDDbNW5B4UBfGdmJSS5VN+eX6SCJrXd+nYAWIHv2ICcaPvIU0nyNGDIvoMvnXasOiq7Y
-        VNISvIiNPMqpSFaIt54VAXZ9Frj2/jZGtQp8KjhMcaw7OdlbLL22QYpJqQ5VitVa50FslK0TltqjjXLf
-        iXrY8I2XfaDeVE/lM7XpTLZXIoRjrwlKHTRLO6P8A9F4NtBMb0j1AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAWNJREFUOE91
+        k0tKg0EQhL+6gEkWSoJvFBXUA0SyETyyN3ApiCBIDCgkEV2IS3eC0o+Z+SM4kJnJdFV39eOHsqQ4cm9n
+        3FYtCrg/5SX5Y6GhYGj3ABYHjhsTtrBX3w0zEFqCFkCvRq2RGEhaIhbI7PW9uuoDRp4bwIguOU+B24Xm
+        8gDNQ3F0kfJGiEmmtis4y5wvpLALJk14KYha0TKtU8QUuEdcVnyqarl1itC5HQvdAofABnAH7DRcRdbG
+        dHYnvUs8JfkIuEZeg8argUtTQ9aexCvwk78H4AZYb7k2eGfztSV4kREVDgQzonAG9DmwOZHPSSGHAwPN
+        IqqCLJ4Rm50YA3xOvNW9aHFIMXlTiyoFOUHbqaxo7vsQoZiTfF6TeHTJKRv0Buz/Sc/+xByIETApxgPg
+        C4vsTvSBZFX/d9UPKYruT1egb+ATdFKD1vqszkoxZVp5lc5VB6WaVzoc6PZt2PoFLMo2c6zsf9MAAAAA
+        SUVORK5CYII=
 </value>
   </data>
   <data name="StopToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -211,4 +193,29 @@
         rkJggg==
 </value>
   </data>
+  <data name="prettyPrintJSONToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAUVJREFUOE9l
+        k0FKBEEMRd8/gO4EcakbbXeC6DXUca4zLjyIiMJ4jrmBuFYQbzBbtSWpVKq6DXR1Kvn5SVVSUEW5NImt
+        VL4pxowdqoUqLa51+ERUYvcnq54RP8BLOnspXOYzzJNXVUNLvEZghRj+pWvIQeIO9N0Bql8j4jaD+tgJ
+        kKXAks3PwqgkmMV4hWFDy0iWGJNT8CNcVVh6g6S7k2tKBSdRJxtgC3oH9lq6liL6USn3EZ+gLXisNsgI
+        +DCCvuTUW7DJAeJLltSTF+sQZfkRamvbRHSEcBPY457cEHaJC6Fz0GsY75GstSZvoDPwi/ZLbNNZ6I11
+        AdpFugiCI+DQqxGXwE60OtqY5fn6K2klZMMylbYfsEEqE9s7fXkwZknrebxJ2NYxyo8zR9em/ul1h0x0
+        bkOpBAZOvf4c3wjq66y09v0B4aYvoV+WdxkAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="prettyPrintXMLToolStripMenuItem.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAUBJREFUOE9t
+        k01KA0EQhb+3COQggheQCN5DNxJ3AckEvYF4BBcewIVrcSe5gXibbF0kWj/d053Jg5mu6nrV9aqmB0nU
+        B4O9w3LPzYx5KGzb95i57rSE46QWje8Mq+xOrlPoGfgYM8e1aO7hajRvQlvgDZhXQkWQc61bK9B1w9oB
+        A3CDx44QfZa+GQR7oUX65xIH4ALpEo+xHnOzbJI3RgCWcaw/d0K/oFlyLLYHGbdUj2TBIeQX+AGvwHc/
+        KxnHVG3aGTwiO0D3Xbr4AV6cVe+Jt2AHWM5IbltIuTNcPrdRw7FMjrcQe2UOYQzICQvAhmaVzvwAcZXJ
+        6zKhMb/tUawk7DM+CHZBdkL3GfMWhtHNKGCX5h34aoTmRYrhlPwmuVh19xN4Kjf8RJHA9Bc4qahiGis6
+        fOnD7hVBRUn75/7jD18pKJZX+FeOAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>60</value>
+  </metadata>
 </root>
