Changed behaviour of dropdown buttons to rightclick for contextmenu. Improved functionality of Erase/Delete button on main form

--- a/FormLogScraper.resx
+++ b/FormLogScraper.resx
@@ -184,15 +184,50 @@
         lQAAAABJRU5ErkJggg==
 </value>
   </data>
-  <data name="BtnErase.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <metadata name="imageListBtnErase.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>265, 17</value>
+  </metadata>
+  <data name="imageListBtnErase.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAABGdBTUEAALGPC/xhBQAAASVJREFUSEul
-        VAkOwjAMS//I15GQeMwQabracTJAWKqWq3aTbjP7CaN6kFWjyHsIibBGAoguThjN6dj+SyflDxt2mI3D
-        bV9uZ03diYjUJhJSO8YZR5tqemwBXk50uT4JaGsXxdVYuJ6YZGJTTAXqwqIeXxACb4ixLGTBS18FNJI3
-        nH5MUwT2gXR+lasdTNLt5/ysaYDTmVZNQL6PscsHVoUo4x148kMHUa88ObBQdBACsUXyKEC0cWkpcX7J
-        u4M5llUgHaCPnA14RPIWdQJy0BaFwOUdsN8IUDgTMJShqR/9HeB3oHxv0C+BRqQIFcjf5Q+6v95i+YHu
-        QMYnp8TEzcye3wvYY7z3CHdqCUZEcQRm+qqFqoNiVxGSaF1ToddxYJcyCrQDL4f+mBSfa4sBAAAAAElF
-        TkSuQmCC
+        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
+        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAAYggAAAJNU0Z0AUkBTAIBAQIB
+        AAEQAQABEAEAASQBAAEYAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABkAMAARgDAAEBAQABIAYAATb/
+        AP8A/wD/AP8A/wDsAAMzAVQDLAHbAwAB/wMAAf8DAAH/AQABAQEAAf8DAAH/AwAB/wMAAf8DAAH/AwAB
+        /wMAAf8DLwHYAzMBVP8A/wAKAAMwAdUCAAEBAf8DAAH/AwAB/wMAAf8BAAEBAQAB/wMAAf8DAAH/AwAB
+        /wMAAf8DAAH/AwAB/wEBAgAB/wIwATEB1WQAAyYBOQNEAZkDPQHBARgCFwHuAx0B6wM9AcEDRQGYAyUB
+        NgwAAzIBUP8AdQABAQIAAf8CAAEBAf8rAAH/AwAB/1wAAwUBBgNEAYkDBAH9AwAB/wEAAQEBAAH/AwAB
+        /wMAAf8DAAH/AQECAAH/AwQB/ANDAYcDBQEGAkQBRQGPAzoBxv8AeAAB/wMAAf8rAAH/AwAB/1gAAwMB
+        BAM5AcoBAAEBAQAB/wEBAgAB/wNEAaQDMgFPAxEBFgMVAR0DMwFRAUUCRAGkAwAB/wMAAf8DHQHrAwAB
+        /wM7AcX/AHUAAQECAAH/AgABAQH/CgABAQH/AQABAQEAAf8LAAH/AwAB/wsAAf8DAAH/WAADQwGDAwAB
+        /wMgAecDLAFEGAADLQFGAQ4BDwEOAfcDAAH/AwAB/wM7AcX/AHUAAQECAAH/AgABAQH/CgABAQH/AwAB
+        /wsAAf8DAAH/CAABAQIAAf8DAAH/VAADGAEgAwIB/gMCAf4DJgE4HAADQAF3AwAB/wEBAgAB/wMAAf8D
+        OwHF/wB1AAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8DAAH/CAABAQIAAf8DAAH/IAADOAFfAz4BbywAA0IB
+        gQMAAf8DRQGdHAADPAFoAgABAQH/AQABAQEAAf8BAQIAAf8DAAH/AzkBxxwAAzgBXwM+AW//AFEAAQEC
+        AAH/AwAB/wsAAf8BAAEBAQAB/wsAAf8DAAH/CwAB/wIAAQEB/xwAAy0BRQMAAf8DAAH/AzYBWSgAAyEB
+        LwMqAUADDwEUTAADLQFFAwAB/wMAAf8DNgFZ/wBNAAEBAgAB/wIAAQEB/wsAAf8BAAEBAQAB/wsAAf8D
+        AAH/CAABAQIAAf8CAAEBAf8YAAMtAUUDAAH/AwAB/wMAAf8DAAH/AzMBU3gAAy0BRQMAAf8DAAH/AwAB
+        /wMAAf8DMwFT/wBJAAEBAgAB/wMAAf8LAAH/AwAB/wsAAf8BAQIAAf8LAAH/AwAB/xQAAzgBXwMAAf8D
+        AAH/AwAB/wMAAf8DAAH/AwAB/wM/AXRwAAM4AV8DAAH/AwAB/wMAAf8DAAH/AwAB/wMAAf8DPwF0/wBI
+        AAH/AgABAQH/CwAB/wEAAQEBAAH/CwAB/wMAAf8LAAH/AwAB/xAAAx0BKQMqAd4DMAHWAzcBzgM3Ac4D
+        NwHOAzcBzgMyAdMDIQHmAyQBNFAAAxABFQMqAUADIQEvDAADHQEpAyoB3gMwAdYDNwHOAzcBzgM3Ac4D
+        NwHOAzIB0wMhAeYDJAE0/wBEAAH/AwAB/woAAQEB/wMAAf8JAAEBAQAB/wMAAf8LAAH/AgABAQH/VAAD
+        OQHIAwAB/wMAAf8DAAH/AwAB/wM5AWAcAANFAZ4DAAH/A0MBhv8AdQABAQIAAf8CAAEBAf8LAAH/AwAB
+        /wsAAf8DAAH/CwAB/wMAAf9UAAM5AcgDAAH/AwAB/wMAAf8DPgFvHAADJQE3AwQB/QMAAf8DIQEv/wB1
+        AAEBAgAB/wMAAf8oAAEBAgAB/wMAAf9UAAM5AcgBAQIAAf8DAAH/AxMB8gMrAUEYAAMtAUUBIAEhASAB
+        5wMAAf8DRQGh/wB8AAH/AwAB/ysAAf8DAAH/VAADOQHIAwAB/wMdAeoDAAH/AwAB/wNFAaADMgFPAxEB
+        FgMVAR0DMwFRA0QBpAMAAf8DAAH/AzcBywMGAQf/AHgAAf8DAAH/AwAB/wMAAf8DAAH/AgABAQH/AwAB
+        /wMAAf8DAAH/AwAB/wMAAf8DAAH/AwAB/wEBAgAB/wMAAf8DAAH/UAADOQHHA0QBjwMFAQYDRAGKAwQB
+        /QMAAf8DAAH/AwAB/wMAAf8DAAH/AQECAAH/AwQB/ANDAYUDBQEG/wB8AAH/AQECAAH/AwAB/wEAAQEB
+        AAH/AQECAAH/AwAB/wMAAf8DAAH/AgABAQH/AQABAQEAAf8DAAH/AgABAQH/AQABAQEAAf8BAQIAAf8D
+        AAH/AwAB/1AAAzEBTgwAAyYBOQNEAZkDPQHBAxcB7gIdAR4B6wM9AcEDRQGYAyUBNv8AmAAB/wEAAQEB
+        AAH/AQECAAH/AwAB/wMAAf8BAQIAAf//AP8A/wD/AP8A/wD/AP8AzAABQgFNAT4HAAE+AwABKAMAAZAD
+        AAEYAwABAQEAAQEFAAHgAQEWAAP/AQAJ/wsACf8LAAn/CwAB+AEAAR8G/wsAAfgBAAEfAv8B8AEOAv8L
+        AAH5Af8BnwL/AcABAAL/CwAB+QH/AZ8C/wGAAQAC/wsAAfkBmQGfAv8BhwHgAv8LAAH5AZkBnwL/AQ8B
+        4AL/CwAB+QGZAZ8B5wH/AR8BwAH+AX8LAAH5AZkBnwHDAf8BHwH/AfwBPwsAAfkBmQGfAYED/wH4AR8L
+        AAH5AZkBnwEAA/8B8AEPCwAB+QGZAZ4BAAF/Af8B+AHgAQcLAAH5AZkBnwL/AQMB+AL/CwAB+QGZAZ8C
+        /wEHAfAC/wsAAfkB/wGfAv8BBwHhAv8LAAH5Af8BnwL/AQABAQL/CwAB8AEAAQ8C/wEAAQMC/wsAAfAB
+        AAEPAv8BcAEPAv8LAAH/AYEH/wsACf8LAAn/CwAJ/wsACw==
 </value>
   </data>
   <data name="BtnStop.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -208,6 +243,27 @@
   <metadata name="ContextMenuReset.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>111, 17</value>
   </metadata>
+  <data name="ToolStripMenuItemReset.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAAUhJREFUOE9t
+        kz1OQ0EMhL8RBSAKCE3SIvHTgJQcgAPQU3AYkBAFEcegoEJcgRNQpqJAQmlAwBmC1l7v80uy0urN2p7Z
+        8VoPbAk5WFker1k5kh1XODXbwsuSQgpS/XYlhrbyTbXsGDgw3HTzzcmKYIy4kwlxg5gjZsCsYME1YjNo
+        TSQJj0EL0BfoEziscXciSuxdaNDrrllzBwtURJhGIvKCIWgOPCZOXhohbsG3xFEih9IF4hVp20NRkCTX
+        uktCaypLk76NUF+5cXssB0stxPzZMXvovJ82hRNrz1pUaXHozKoeLQieEG/AKCmEwwefkj30qTEarSsd
+        CD4QP4hL0AZQ9hXwB/y6AGd+fziooB73gJcyUsE3tu3mZ8EucA/FQTxOGKjfTop9xAQ0wZxlp2WMa/4H
+        f4su4rHeKeEMlng9iTakbswWqcR/VMwliUGhvcYAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="ToolStripMenuItemClear.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAABGdBTUEAALGPC/xhBQAAARxJREFUOE9l
+        k4ttwzAMRN8N0XnqJRyg6H4tbA+R7JQBXPBjiXQd2JKOx89RDACyj2+E/RyYy2W8AXkegJ016RP0uIN7
+        Z9QAH8CC7NUCnKAzVt+HzTgYt5TjZaOHxKnp0AJceK5rL31UogPY09Lsrk4cSPvM/V/TJn+9phfwqSj5
+        lXVuzsmMM3HqEcwKTI60Ch4pyVC3j4riyUgRZhDSaWUE8OeQ5AnqdQ93SanRLSeyACoBrEfau+7ehyAE
+        HN0Wj9wb2Jocc1MEhYQaICT4PriH6i0NCbMJfgsJ5cBcA+akzThub1M7m/ELPNN5iTUmMLEn4qeJnsn9
+        +w285wQqJ29MpNm+gjqC5L+lgbW8RJrWIj0aeXNoxxL0ylMsfyn+Qxt152TcAAAAAElFTkSuQmCC
+</value>
+  </data>
   <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>70</value>
   </metadata>
