Changed tootltip delay for post processing button to 250ms

--- a/LogPostProcessors/UserControlPostProcessing.resx
+++ b/LogPostProcessors/UserControlPostProcessing.resx
@@ -124,33 +124,33 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
         LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA/AUAAAJNU0Z0AUkBTAIBAQIB
-        AAE4AQABOAEAARgBAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMAARADAAEBAQABIAYAARiS
-        AAMbASUDKgFAAyIBMfwAAyABLQMWAR5wAANSAawDAAH/A0MB3PgAAy0BRAENAgwB/AM6Ae0DHQEoYAAD
-        HQEoAUUCRgHbA1ABoQIIAQkB/AEBAgAB/wEBAQABAQH/A1IBrANGAdYDMQFN6AADGQEjAyQB9QIBAQAB
-        /wEAAQEBAAH/A0EB6wMbASZcAAFSAlEBuwIAAQEB/wMAAf8BMAIvAewDUQHAAzwB4gEBAgAB/wMAAf8D
-        OQHlAwUBBuQAAwsBDgNTAdYBAAEBAQAB/wEAAQEBAAH/AwAB/wNIAeYDGAEhEAADJwE6AxIBGAMTARkD
-        KAE8OAADOQFfAgUBBAH+AwAB/wMbASYEAAMJAQsDLAHtAwAB/wNLAY/sAAMQARUDUQHYAQABAQEAAf8D
-        AQH/AwAB/wNJAeIDFQEdDAADDAEQA0kB4gNOAeEDDAEPOAADAgEDAzMB6AIEAQUB/gMCAQMIAANKAdQB
-        AQIAAf8DFQEc8AADEgEYA1MB2gMAAf8BAQIAAf8DAAH/A04B3QMUARsIAAMNAREDSwHjA0kB4gMMAQ8U
-        AANQAZ0DUAGeHAADUgG0AwAB/wMAAf8DSgGLAxEBFgM+AWoDAAH/AgABAQH/A0IB3QMGAQcUAANPAZ0D
-        TgGe1AADFQEcA08B3gIAAQEB/wEAAQEBAAH/AwAB/wNTAdoDEgEYBAADJgE5AxIBGAMSARgDJgE5EAAD
-        RAF6AwAB/wMAAf8DRgGAGAADRwGDAwEB/wEBAgAB/wMBAf8DAAH/AQABAQEAAf8CAAEBAf8DAAH/A1EB
-        shQAA0QBegMAAf8DAAH/A0YBgNQAAxgBIAFFAkgB5AMAAf8DAAH/A1QB0wNZAcMDEAEVHAADTAGRAwAB
-        /wMAAf8DAAH/AwAB/wNNAZMIAAMPARQDKgFAAwoBDQMKAQ0DPAFmAxgBIANGAdYDAQH/AyMB8gMgAS0D
-        NQFWAxsBJhAAA0wBkQMAAf8DAAH/AwAB/wMAAf8DTAGT1AADGgEkA0UB5wNSAdkDEQEWAxsBJgNVAbQD
-        DAEQFAADOwFlAwAB/wM4Ae4DQQHpA0EB6QM6Ae0DAAH/BAADLQFGA0cBgwMAAf8DPwFuAy0BRQgAA00B
-        mAMAAf8DTwHHGAADOwFlAwAB/wMqAe4DMgHpAzIB6QMsAe0DAAH/2AADHAEnAVgBVgFYAcsDGgEkAxEB
-        FgNWAc4DFgEeMAADLAFDAwAB/wIUARUB+QNRAacBBAIFAf4DAAH/AyABLv8AIQADHgErA1EB2ANWAdAD
-        KwFBNAADBgEHA0kB1QNEAXsEAANNAZUDUQHAAwMBBP8AEQADJwE6AxIBGAMTARkDKAE8BAADFwQfASwE
-        AAMnAToDEgEYAxMBGQMoATwkAAMsAUMDCAH9A1ABxQMuAUgDRgHWAhkBGAH3AyIBMf8AEQADDAEQA0kB
-        4gNOAeEDDAEPEAADDAEQA0kB4gNOAeEDDAEPJAADDAEQA1EBqgNRAcIBAAIBAf8DUwG3A1EBqAMGAQf/
-        ABEAAw0BEQNLAeMDSQHiAwwBDxAAAw0BEQNLAeMDSQHiAwwBDywAAygBOwNRAcADHgEq/wAZAAMmATkD
-        EgEYAxIBGAMmATkQAAMmATkDEgEYAxIBGAMmATn/AEUAAUIBTQE+BwABPgMAASgDAAFgAwABEAMAAQEB
-        AAEBBQABwBcAA/8BAAT/AR8B/wYAAc8D/wEfAf8GAAGHAv8B+AEDAf8GAAEDAv8B+AEBAf8GAAEBAeEB
-        /wH4AUMB/wYAAYAB4QH/AfgBYwH/BgABwAFhAfMB+AEBAfMGAAHgASEB4QH4AQMB4QYAAfABHwLAAQMB
-        wAYAAfgBDwGAAYMBHwGABgAB/AEPAf8BAQL/BgAB/gEfAf8BEQL/BgAB4QEhAf8BAQL/BgAC4QH/AQEC
-        /wYAAuEB/wHHAv8GAALhBP8GAAs=
+        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAA9gUAAAJNU0Z0AUkBTAIBAQIB
+        AAFAAQABQAEAARgBAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABYAMAARADAAEBAQABIAYAARiS
+        AAMbASUDKgFAAyIBMfwAAyABLQMWAR5wAANUAawDAAH/A0sB3PgAAy0BRAEPAg4B/ANAAe0DHQEoYAAD
+        HQEoA0wB2wNRAaECCgELAfwBAQIAAf8BAQEAAQEB/wNUAawDTgHWAzEBTegAAxkBIwMpAfUCAQEAAf8B
+        AAEBAQAB/wNHAesDGwEmXAADVAG7AgABAQH/AwAB/wM3AewDVQHAA0MB4gEBAgAB/wMAAf8DQQHlAwUB
+        BuQAAwsBDgNXAdYBAAEBAQAB/wEAAQEBAAH/AwAB/wNOAeYDGAEhEAADJwE6AxIBGAMTARkDKAE8OAAD
+        OQFfAgYBBQH+AwAB/wMbASYEAAMJAQsDNAHtAwAB/wNLAY/sAAMQARUDVgHYAQABAQEAAf8DAQH/AwAB
+        /wNPAeIDFQEdDAADDAEQA08B4gNTAeEDDAEPOAADAgEDAzoB6AIFAQYB/gMCAQMIAANRAdQBAQIAAf8D
+        FQEc8AADEgEYA1cB2gMAAf8BAQIAAf8DAAH/A1MB3QMUARsIAAMNAREDUAHjA08B4gMMAQ8UAANQAZ0D
+        UQGeHAADVQG0AwAB/wMAAf8DSgGLAxEBFgM+AWoDAAH/AgABAQH/A0kB3QMGAQcUAANQAZ0DTwGe1AAD
+        FQEcA1QB3gIAAQEB/wEAAQEBAAH/AwAB/wNXAdoDEgEYBAADJgE5AxIBGAMSARgDJgE5EAADRAF6AwAB
+        /wMAAf8DRgGAGAADRwGDAwEB/wEBAgAB/wMBAf8DAAH/AQABAQEAAf8CAAEBAf8DAAH/A1QBshQAA0QB
+        egMAAf8DAAH/A0YBgNQAAxgBIAFLAkwB5AMAAf8DAAH/A1gB0wNZAcMDEAEVHAADTAGRAwAB/wMAAf8D
+        AAH/AwAB/wNNAZMIAAMPARQDKgFAAwoBDQMKAQ0DPAFmAxgBIANOAdYDAQH/AykB8gMgAS0DNQFWAxsB
+        JhAAA0wBkQMAAf8DAAH/AwAB/wMAAf8DTQGT1AADGgEkA0sB5wNWAdkDEQEWAxsBJgNVAbQDDAEQFAAD
+        OwFlAwAB/wM9Ae4DRQHpA0UB6QNAAe0DAAH/BAADLQFGA0cBgwMAAf8DPwFuAy0BRQgAA04BmAMAAf8D
+        VAHHGAADOwFlAwAB/wMxAe4DOgHpAzoB6QM0Ae0DAAH/2AADHAEnAVkBWAFZAcsDGgEkAxEBFgNZAc4D
+        FgEeMAADLAFDAwAB/wIYARkB+QNSAacBBQIGAf4DAAH/AyABLv8AIQADHgErA1YB2ANYAdADKwFBNAAD
+        BgEHA1AB1QNEAXsEAANOAZUDVQHAAwMBBP8AEQADJwE6AxIBGAMTARkDKAE8BAADFwQfASwEAAMnAToD
+        EgEYAxMBGQMoATwkAAMsAUMDCgH9A1UBxQMuAUgDTgHWAh0BHAH3AyIBMf8AEQADDAEQA08B4gNTAeED
+        DAEPEAADDAEQA08B4gNTAeEDDAEPJAADDAEQA1MBqgNVAcIBAAIBAf8DVgG3A1IBqAMGAQf/ABEAAw0B
+        EQNQAeMDTwHiAwwBDxAAAw0BEQNQAeMDTwHiAwwBDywAAygBOwNVAcADHgEq/wAZAAMmATkDEgEYAxIB
+        GAMmATkQAAMmATkDEgEYAxIBGAMmATn/AEUAAUIBTQE+BwABPgMAASgDAAFgAwABEAMAAQEBAAEBBQAB
+        wBcAA/8BAAT/AR8B/wYAAc8D/wEfAf8GAAGHAv8B+AEDAf8GAAEDAv8B+AEBAf8GAAEBAeEB/wH4AUMB
+        /wYAAYAB4QH/AfgBYwH/BgABwAFhAfMB+AEBAfMGAAHgASEB4QH4AQMB4QYAAfABHwLAAQMBwAYAAfgB
+        DwGAAYMBHwGABgAB/AEPAf8BAQL/BgAB/gEfAf8BEQL/BgAB4QEhAf8BAQL/BgAC4QH/AQEC/wYAAuEB
+        /wHHAv8GAALhBP8GAAs=
 </value>
   </data>
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
